added element id to change page text dynamically based on script logic

--- a/twitch/OAuth/App/content/redirect.html
+++ b/twitch/OAuth/App/content/redirect.html
@@ -7,7 +7,7 @@
 
         <body>
             <h1>Redirect</h1>
-            <p>Loading. . .</p>
+            <p id= "token-response">Loading. . .</p>
             <script src="twitch/OAuth/App/content/scripts/token.js"></script>
         </body>
     </html>
