corrected script source path

--- a/twitch/OAuth/App/content/redirect.html
+++ b/twitch/OAuth/App/content/redirect.html
@@ -8,6 +8,6 @@
         <body>
             <h1>Redirect</h1>
             <p id= "token-response">Loading. . .</p>
-            <script src="twitch/OAuth/App/content/scripts/token.js"></script>
+            <script src="content/scripts/token.js"></script>
         </body>
     </html>
