--- a/twitch/OAuth/App/content/index.html
+++ b/twitch/OAuth/App/content/index.html
@@ -1,11 +1,17 @@
 <!DOCTYPE html>
-    <html>
+    <html lang = "en">
         <head>
+            <meta charset = "UTF-8">
+            <meta name = "viewport" content = "width=device-width, inital-scale=1.0">
             <title>Homepage</title>
         </head>
 
         <body>
             <h1>Index Page</h1>
             <a href="https://id.twitch.tv/oauth2/authorize?response_type=token&client_id=gnltd0pal01dzp6uxogo36s83v4ygm&redirect_uri=http://localhost:3000/redirect&scope=">Click here to generate a new token!</a>
+
+            <a href = "/twitchSettings">
+                <button>Twitch settings</button>
+            </a>
         </body>
     </html>
